<?xml version="1.0" encoding="utf-8"?>
<!--提示框-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fh_rl_hint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fh_color_6000"
    android:visibility="gone"
    >

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:padding="10dp"
        android:background="@drawable/btn_gray_yin_huan_5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/fh_hint" />

        <!--提示信息-->
        <TextView
            android:id="@+id/tv_hint_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/color_999"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="13sp"
            android:maxLines="4"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="8dp"
             />
        <!--左边按钮-->
        <TextView
            android:id="@+id/tv_hint_cancel"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_red_bg_5"
            android:text="@string/fh_cancel" />
        <!--右边按钮-->
        <TextView
            android:id="@+id/tv_hint_confirm"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_blue_bg_5"
            android:text="@string/fh_confirm" />

        <!--确定按钮-->
        <TextView
            android:id="@+id/tv_hint_sub"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_blue_5"
            android:text="@string/fh_confirm" />

    </RelativeLayout>


</RelativeLayout>