<?xml version="1.0" encoding="utf-8"?>
<!--会话推送页-->
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/layout_fh_video">
    <!--推送列表-->
    <RelativeLayout
        android:id="@+id/rl_push"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="200dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@mipmap/ic_fh_chat_bg"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/fh_receive_push"/>
        <ImageView
            android:id="@+id/iv_push_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="12dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_fh_black_end"/>
        <TextView
            android:id="@+id/tv_push_hint"
            android:layout_marginTop="40dp"
            android:text="@string/fh_no_push"
            android:textColor="@color/color_999"
            android:textSize="18dp"
            android:paddingTop="50dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <GridView
            android:id="@+id/gv_push"
            android:numColumns="3"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></GridView>
    </RelativeLayout>




    <!--推送弹窗-->
    <RelativeLayout
        android:id="@+id/rl_push_show"
        android:layout_width="240dp"
        android:layout_height="300dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_push_icon"
            android:layout_width="match_parent"
            android:layout_height="180dp"
             />

        <TextView
            android:id="@+id/tv_push_name"
            android:layout_width="match_parent"
            android:layout_marginTop="190dp"
            android:layout_height="40dp"
            android:lines="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:textSize="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="240dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_green_90"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/fh_view_now"
            android:ellipsize="end"
            android:textSize="14dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_push_show_close"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="15dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_fh_white_close"
        android:layout_below="@id/rl_push_show" />

</merge>
